	* lib/rubygems/commands/contents_command.rb: Match only exact gem
	names.  Fixes bug #9681.  Patch by Michael DeCandia
	* lib/rubygems/remote_fetcher.rb: Perform a GET request if the HEAD
	request doesn't have Content-Length.  Fixes bug #9771.  Patch by Ben
	Bleything.
	* lib/rubygems.rb: Clear Gem::searcher when we Gem::clear_paths.
	Fixes bug #12886.  Submitted by Peter Williams.

2007-08-02  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/gem_commands.rb: Removed and broken up into individual
	files.
	* lib/rubygems/command_manager.rb: Lazily loads gem commands.  Now to
	use CommandManager just "require 'rubygems/command_manager'" and
	everything will be there.

2007-08-01  Eric Hodel  <drbrain@segment7.net>

	* lib/*, test/*: Pushed down dependencies as far as reasonable.
	Removed Gem::manage_gems.  Now only 14 files are loaded with "require
	'rubygems'".  Added tests for `gem build` and `gem cert`.
	* lib/rubygems/extensions.rb: Added common place for all extensions.

2007-07-26  Eric Hodel  <drbrain@segment7.net>

	* test/test_gem_ext_configure_builder.rb: Linux has different behavior
	for `sh ./configure` when configure is missing.  Fix adapted from
	Patch #10019 by Donavan Pantke.
	* lib/rubygems/commands/pristine_command.rb: Compare fully-qualified
	paths.  Fixes bug #7976 by Lyle Johnson.
	* lib/rubygems/config_file.rb: Add ConfigFile#[]=, so --proxy
	command-line option works.  Fixes #8152 by Justin Sabelkko.
	* lib/rubygems/post-install.rb: Make sure we use the
	latest-and-greatest RubyGems when running post-install.rb.  Fixes Bug
	#8411 by Duy Nguyen.
	* lib/rubygems/remote_fetcher.rb: An empty HTTP_PROXY means no proxy.
	Fixes Bug #9042 by Michael Brodhead.
	* lib/rubygems/version.rb: Disallow newlines in version string.  Strip
	spaces from version string.  Fixes Bug #9499 by Bryce Kerley.
	* lib/rubygems/commands/sources_command.rb: Fix spelling error.  Fixes
	Bug #11064 by Chris Eskow.

2007-07-25  Eric Hodel  <drbrain@segment7.net>
