@@ -102,8 +102,6 @@ class Gem::SourceInfoCache
 
   # Refreshes each source in the cache from its repository.
   def refresh
-    require 'sources'
-
     Gem.sources.each do |source_uri|
       cache_entry = cache_data[source_uri]
       if cache_entry.nil? then
